# draw-stats-obs-plugin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  buildspec.json
.github/scripts/: Build-Windows.ps1
.github/workflows/: release.yml
cmake/common/: buildspec_common.cmake
data/locale/: en-US.ini  ja-JP.ini
data/overlay/: index.html
helpers/macos/: obs_standalone_input_helper.mm
helpers/windows/: obs_standalone_input_helper.cpp
plugin/: obs_browser_source_panel.html
scenes/: draw-stats-obs-scene.json
scripts/: package-release.sh
src/: obs_standalone_client.cpp  obs_standalone_client.hpp  obs_standalone_dock.cpp  obs_standalone_dock.hpp  obs_standalone_feature_flag.cpp  obs_standalone_feature_flag.hpp  obs_standalone_overlay_server.cpp  obs_standalone_overlay_server.hpp  obs_standalone_security.cpp  obs_standalone_security.hpp  obs_standalone_security_macos.mm  plugin-main.cpp
tests/: obs_standalone_contract_test.cpp  overlay_contract.test.mjs
